--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
 	<link href = 'https://api.tiles.mapbox.com/mapbox.js/v2.1.9/mapbox.css' rel = 'stylesheet'/>
 	<link rel = 'stylesheet' type = "text/css" href = "css/styles.css" />
 	
-
-
 	<title>Haze in China</title>
 	
 </head>
@@ -36,8 +34,18 @@
 	</div>
 
 	<!-- second visualization: more information about a specific city-->
-	<div id=""></div>
+	<div id="secondViz">
+		<div id="pieChartDiv">
+
+		</div>
+	</div>
+
+	<!-- third visualization: more information about overall data -->
+	<div id="thirdViz">
+	</div>
+
 	
+
 	<!-- comparsion -->
 	<div id = "secondViz">
 		<h2 class = "center">Is Chinese Data Similar to US Data for Year 2015?</h2>
