donut chart almost done

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 	<!-- second visualization: more information about a specific city-->
 	<div id="secondViz">
-		<div id="pieChartDiv">
+		<div id="donutChartDiv">
 
 		</div>
 	</div>
@@ -44,7 +44,7 @@
 	<div id="thirdViz">
 	</div>
 
-	
+
 
 	<!-- comparsion -->
 	<div id = "secondViz">
